force-app/main/default/objects/Account/fields/In_District__c.field-meta.xml
<CustomField>
    <fullName>In_District__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In District?</label>
    <type>Checkbox</type>
</CustomField>