force-app/main/default/objects/Account/fields/Main_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main Contact Person</description>
    <inlineHelpText>Main Contact Person</inlineHelpText>
    <label>Main Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Main Contact Person)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>