force-app/main/default/objects/Account/fields/NAICS_Number__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Number__c</fullName>
    <description>NAICS Number - Type of Business</description>
    <inlineHelpText>NAICS Number - Type of Business</inlineHelpText>
    <label>NAICS Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>