force-app/main/default/objects/Account/fields/Storefront_Appearance__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Appearance__c</fullName>
    <description>Storefront Appearance?</description>
    <inlineHelpText>Storefront Appearance?</inlineHelpText>
    <label>Storefront Appearance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Appearance</valueSetName>
    </valueSet>
</CustomField>