force-app/main/default/objects/Account/fields/Yelp__c.field-meta.xml
<CustomField>
    <fullName>Yelp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yelp</label>
    <type>Checkbox</type>
</CustomField>