force-app/main/default/objects/Account/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <description>All businesses inside the district have a zone, those outside do not</description>
    <inlineHelpText>All businesses inside the district have a zone, those outside do not</inlineHelpText>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Zone</valueSetName>
    </valueSet>
</CustomField>